grub2 (1.99-18) UNRELEASED; urgency=low

  * Ensure that /sbin and /usr/sbin are in $PATH when running tests (closes:
    #662916).

 -- Colin Watson <cjwatson@debian.org>  Wed, 07 Mar 2012 10:06:22 +0000

grub2 (1.99-17) unstable; urgency=low

  * efi_disk_cache.patch: Fix incorrect GRUB_DISK_CACHE_BITS (LP: #944347).

 -- Colin Watson <cjwatson@debian.org>  Tue, 06 Mar 2012 17:43:42 +0000

grub2 (1.99-16) unstable; urgency=low

  * Backport from upstream:
    - Build with -fno-asynchronous-unwind-tables to save space (closes:
      #662787).

 -- Colin Watson <cjwatson@debian.org>  Tue, 06 Mar 2012 12:45:42 +0000

grub2 (1.99-15) unstable; urgency=low

  [ Adam Conrad ]
  * grub.cfg_400.patch: Redirect grep stdout to /dev/null since
    grub-mkconfig is "exec > grub.cfg.new", which causes grep's input
    and output to be the same FD (LP: #934269) (closes: #652972)
  * efi_disk_cache.patch: Bump the disk cache on EFI systems to
    dramatically reduce load times for vmlinux/initrd (LP: #944347)

  [ Colin Watson ]
  * no_libzfs.patch: Use xasprintf rather than asprintf.
  * Backport from upstream:
    - Rewrite XFS btree parsing; fixes invalid BMAP (closes: #657776).
    - Handle newer autotools, and add some missing quotes in the process.
      (Note that this moves grub-mkconfig_lib and update-grub_lib to
      /usr/share/grub; I added links in /usr/lib/grub for compatibility.)
    - Fix incorrect identifiers in bash-completion (closes: #661415).
    - Add support for GRUB_CMDLINE_GNUMACH (closes: #660493).
  * Build with GCC 4.6 (closes: #654727).

  [ Debconf translations ]
  * Dutch (Jeroen Schot).  Closes: #651275
  * Bulgarian (Damyan Ivanov).  Closes: #653356
  * Icelandic (Sveinn í Felli). 
  * Ukrainian (Yatsenko Alexandr).  Closes: #654294
  * Italian (Luca Monducci).  Closes: #654304
  * Thai (Theppitak Karoonboonyanan).  Closes: #656551
  * Uyghur (Abduqadir Abliz)
  * Indonesian (Mahyuddin Susanto).  Closes: #656705